<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
    </parent>

    <groupId>no.nav.tilbakemeldingsmottak</groupId>
    <artifactId>tilbakemeldingsmottak</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>api</module>
        <module>app</module>
        <module>domain</module>
        <module>pdfutility</module>
    </modules>

    <properties>
        <!-- Keep up to date with parent version -->
        <spring-boot.version>3.1.0</spring-boot.version>
        <cxf.version>4.0.1</cxf.version>

        <microsoft-graph.version>5.58.0</microsoft-graph.version>
        <microsoft-graph-core.version>2.0.18</microsoft-graph-core.version>
        <azure.identity.version>1.9.0</azure.identity.version>

        <!-- NAV internal dependencies -->
        <token-support.version>3.1.0</token-support.version>
        <mock-oauth2-server.version>0.5.8</mock-oauth2-server.version>
        <spring-core.version>6.0.9</spring-core.version>
        <caffeine.version>3.1.6</caffeine.version>
        <netty-all.version>4.1.93.Final</netty-all.version>

        <!-- Dependencies that should be on the latest version -->
        <kotlin.version>1.8.21</kotlin.version>
        <httpclient5.version>5.2.1</httpclient5.version>
        <okhttp3.version>4.11.0</okhttp3.version>
        <rxjava.version>3.1.6</rxjava.version>

        <jackson-bom.version>2.15.1</jackson-bom.version>
        <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>

        <jakarta.inject.version>2.0.1</jakarta.inject.version>
        <jakarta.xml-bind.version>4.0.0</jakarta.xml-bind.version>
        <jakarta.activation.version>2.1.2</jakarta.activation.version>
        <jakarta-servlet-api.version>6.0.0</jakarta-servlet-api.version>
        <jakarta-validation-api.version>3.0.2</jakarta-validation-api.version>
        <jakarta-annotation.version>2.1.1</jakarta-annotation.version>

        <logstash-logback-encoder.version>7.3</logstash-logback-encoder.version>
        <lombok.version>1.18.28</lombok.version>
        <mockito-junit-jupiter.version>5.3.1</mockito-junit-jupiter.version>
        <resilience4j.version>2.0.2</resilience4j.version>
        <resilience4j-prometheus.version>1.7.1</resilience4j-prometheus.version>
        <micrometer.version>1.11.0</micrometer.version>
        <wiremock.version>2.27.2</wiremock.version>
        <spring-cloud-contract-wiremock.version>4.0.2</spring-cloud-contract-wiremock.version>
        <json-smart.version>2.4.11</json-smart.version>
        <rest-assured.version>5.3.0</rest-assured.version>
        <graphql-java.version>20.2</graphql-java.version>
        <spring-security-oauth2.version>6.1.0</spring-security-oauth2.version>
        <google-cloud-bigquery.version>26.15.0</google-cloud-bigquery.version>
        <bigquery.version>2.26.1</bigquery.version>

        <spring-retry.version>2.0.1</spring-retry.version>
        <flyway.version>9.19.1</flyway.version>
        <tika-core.version>2.8.0</tika-core.version>
        <pdfbox.version>2.0.28</pdfbox.version>
        <openhtml.version>1.0.10</openhtml.version>
        <handlebars.version>4.3.1</handlebars.version>
        <springdoc-openapi.version>1.7.0</springdoc-openapi.version>
        <swagger-annotations.version>2.2.10</swagger-annotations.version>
        <gson.version>2.10.1</gson.version>
        <gson-fire.version>1.8.5</gson-fire.version>
        <findbugs.version>3.0.2</findbugs.version>
        <javax.activation.version>1.2.0</javax.activation.version>
        <javax.xml-bind.version>2.3.1</javax.xml-bind.version>
        <versions-maven-plugin>2.15.0</versions-maven-plugin>
        <poi.version>5.2.3</poi.version>

        <!-- Maven plugins -->
        <wagon-webdav-jackrabbit.version>3.5.3</wagon-webdav-jackrabbit.version>
        <maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.1.0</maven-failsafe-plugin.version>
        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
        <openapi-generator-maven-plugin.version>6.4.0</openapi-generator-maven-plugin.version>
        <graphql-maven-plugin.version>2.0</graphql-maven-plugin.version>
        <maven-filtering>3.3.1</maven-filtering>

        <!-- Project config -->
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>libraries-bom</artifactId>
                <version>${google-cloud-bigquery.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav-jackrabbit</artifactId>
                <version>${wagon-webdav-jackrabbit.version}</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
                <configuration>
                    <rulesUri>file://${user.dir}/maven-version-rules.xml</rulesUri>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>central</id>
            <name>maven central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
        <repository>
            <id>github</id>
            <name>nav github</name>
            <url>https://github-package-registry-mirror.gc.nav.no/cached/maven-release</url>
        </repository>
        <repository>
            <id>bintray</id>
            <name>Bintray</name>
            <url>https://jcenter.bintray.com</url>
        </repository>
    </repositories>
</project>
